infrastructure/03-infrastructure/vpc_04_security_group.tf
resource "aws_security_group" "subnet-security-group" {
  count = var.vpc-enabled ? 1 :0

  name                = "general-subnet-security-group"
  description         = "Allow SSH, HTTP and HTTPS inbound connections"
  vpc_id              = aws_vpc.vpc[0].id

  # allow access on port 5432
  ingress {
    description = "aurora rds"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow access on port 8080
  ingress {
    description = "aws events service"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow access on port 80
  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow access on port 443
  ingress {
    description = "https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow access on port 22
  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # All Traffic allowed
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
